# medicine-adherence-env

./: Dockerfile  README.md  client.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
